--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "crypto-js": "^4.1.1",
     "express": "^4.17.3",
-    "mongoose": "^6.2.2"
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.2",
+    "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.2.2",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.0",
@@ -11,9 +19,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-"devStart":"nodemon index.js"
+    "devStart": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BulelaG/thuto-backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/BulelaG/thuto-backend/issues"
+  },
+  "homepage": "https://github.com/BulelaG/thuto-backend#readme",
+  "keywords": [],
   "description": ""
 }
