--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "express": "^4.17.3",
     "express-flash": "^0.0.2",
