--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "devStart": "nodemon index.js"
+    "devStart": "nodemon index.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
